fix nav wrap

--- a/main.css
+++ b/main.css
@@ -214,6 +214,19 @@ a:focus {
     }
 }
 
+@media (max-width: 978px) {
+    .main-content {
+      margin: 0;
+    }
+    .nav {
+      height: initial;
+      position: initial;
+    }
+    .main-nav nav {
+      padding: 0;
+    }
+  }
+
 .page-toc ul {
     list-style: none;
     margin: 0;
